--- a/tareas/tarea_1/index.html
+++ b/tareas/tarea_1/index.html
@@ -1,4 +1,3 @@
-
 <html lang="en">
 <head>
     <title>sizes and spacings</title>
@@ -6,7 +5,6 @@
 </head>
 <body>
     <div>
-        
         <h1 >Unidades CSS</h1>
         <h3>Absolutas</h3>
         <p style="font-size: 1 in" >  1 in: pulgada </p>
@@ -59,5 +57,6 @@
     <div class="box">
         <div class="content auto pb">padding-botton: 15px</div>
     </div>
+<script src="js/script.js"></script>
 </body>
 </html>
